--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ function initialize()
 	markerRoot1 = new THREE.Group();
 	scene.add(markerRoot1);
 	let markerControls1 = new THREEx.ArMarkerControls(arToolkitContext, markerRoot1, {
-		type: 'pattern', patternUrl: "data/hiro.patt",
+		type: 'pattern', patternUrl: "data/kanji.patt",
 	})
 
 	////////////////////////////////////////////////////////////
@@ -169,6 +169,12 @@ function initialize()
 	);
 	
 	reflectMesh.position.y = 1;
+
+	// reflectMesh.rotation(0, 90, 0);
+
+	//console.log(reflectMesh)
+	//reflectMesh.rotation.x = - Math.PI / 2;
+	// reflectMesh.rotation.z = - Math.PI / 2;
 		
 	markerRoot1.add( reflectMesh );
 }
