--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ function update()
 	if ( arToolkitSource.ready !== false )
 		arToolkitContext.update( arToolkitSource.domElement );
 		
-	reflectMesh.rotation.x -= 0.00;
+	//reflectMesh.rotation.x -= 0.00;
 }
 
 
