Plane to sphere geometry

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ function initialize()
 			texture: { value: videoTexture },
 			refractionRatio: { value: 0.75 },
 			distance: { value: 1.0 },
-			opacity: { value: 0.8 },
+			opacity: { value: 1 },
 			tint: { value: new THREE.Vector3(0.8, 0.8, 1.0) }
 		},
 		vertexShader: document.getElementById( 'vertexShader' ).textContent,
@@ -164,7 +164,7 @@ function initialize()
 	});
 	
 	reflectMesh = new THREE.Mesh( 
-		new THREE.PlaneBufferGeometry(2,2,4,4), // new THREE.SphereBufferGeometry(1, 32, 32), 
+		new THREE.SphereBufferGeometry(1, 32, 32), // new THREE.SphereBufferGeometry(1, 32, 32), 
 		refractMaterial 
 	);
 	
