animating the knot

--- a/index.html
+++ b/index.html
@@ -169,12 +169,6 @@ function initialize()
 	);
 	
 	reflectMesh.position.y = 1;
-
-	// reflectMesh.rotation(0, 90, 0);
-
-	//console.log(reflectMesh)
-	//reflectMesh.rotation.x = - Math.PI / 2;
-	// reflectMesh.rotation.z = - Math.PI / 2;
 		
 	markerRoot1.add( reflectMesh );
 }
@@ -185,7 +179,7 @@ function update()
 	if ( arToolkitSource.ready !== false )
 		arToolkitContext.update( arToolkitSource.domElement );
 		
-	//reflectMesh.rotation.x -= 0.00;
+	reflectMesh.rotation.y -= 0.01;
 }
 
 
